# coin-users

./: .coverage  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  test.sh
config/: settings.py
users/: authentication.py  managers.py  models.py  urls.py  views.py
users/middlewares/: jwt_middleware.py
users/migrations/: 0001_initial.py
users/permissions/: user_permission.py
users/serializers/: user_serializer.py
users/services/: jwt_service.py  mail_service.py  model_service.py  nickname_service.py  social_login_service.py  user_service.py
users/tests/: create_user_test.py  test_api_user.py
users/views/: oauth_view.py  user_view.py
worker/: __init__.py  celery.py  task.py
